# mit-commit

./: .fastconventional.yaml  .gitignore  .mergify.yml  .versio.yaml  63146.txt  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  cliff.toml  cog.toml
.forgejo/workflows/: ci.yml  publish.yml  test-and-tag.yml
.github/: dependabot.yml
.github/workflows/: automerge.yml  build-releases.yml  publish.yml  test-and-tag.yml
benches/: commit_message.rs
ci/: concourse.yaml
examples/: test_roundtrip.rs
src/: bodies.rs  bodies_test.rs  body.rs  body_test.rs  comment.rs  comment_test.rs  comments.rs  comments_test.rs  commit_message.rs  commit_message_test.rs  fragment.rs  fragment_test.rs  lib.rs  scissors.rs  scissors_test.rs  subject.rs  subject_test.rs  trailer.rs  trailer_test.rs  trailers.rs  trailers_test.rs
tests/: comment_char_is_not_in_legal_list.rs  commit_message_with_comment_right_next_to_subject.rs  commit_message_with_no_comments.rs  commit_message_with_whitespace_starting_last_line.rs  commit_with_all_features.rs  long_subject_only_commit.rs  multiple_trailers.rs  never_panic.rs  non_standard_comment_character.rs  not_verbose_commit.rs  trailing_empty_newlines.rs
