[package]
name = "mit-commit"
version = "3.2.2"
authors = [ "Billie Thompson <billie+mit-commit@billiecodes.com>" ]
edition = "2024"
license = "CC0-1.0"
description = "For building commit linters. This makes it easy."
categories = [ "parser-implementations", "parsing", "text-editors" ]
keywords = [ "git", "git-hooks" ]
readme = "README.md"
repository = "https://codeberg.org/PurpleBooth/mit-commit"

[dependencies]
indoc = "2.0.6"
thiserror = "2.0.12"
regex = "1.11.1"
miette = "7.6.0"
nom = "7.1.3, ||, ^8"

[dev-dependencies]
criterion = "0.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tempfile = "3.20.0"

[[bench]]
name = "commit_message"
harness = false
