[package]
name = "mit-commit"
version = "3.3.3"
authors = [ "Billie Thompson <billie+mit-commit@billiecodes.com>" ]
edition = "2024"
license = "CC0-1.0"
description = "For building commit linters. This makes it easy."
categories = [ "parser-implementations", "parsing", "text-editors" ]
keywords = [ "git", "git-hooks" ]
readme = "README.md"
repository = "https://codeberg.org/PurpleBooth/mit-commit"

[dependencies]
indoc = "2"
thiserror = "2"
regex = "1"
miette = "7"

[dev-dependencies]
criterion = "0.7"
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"

[[bench]]
name = "commit_message"
harness = false
